--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@import "tailwindcss";
+
+:root {
+    --tile-light: #f0d9b5;
+    --tile-dark: #b58863;
+    --tile-size: 80px;  
+    --background-color: #212121;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
